basic_grammer.txt
<program> ::= { <line> }

<line> ::= <number> <statement>

<statement> ::= <let-stmt>
             | <print-stmt>
             | <input-stmt>
             | <goto-stmt>
             | <if-stmt>
             | <end-stmt>

<let-stmt> ::= "LET" <var> "=" <expr>

<print-stmt> ::= "PRINT" <print-list>

<print-list> ::= <print-item> { "," <print-item> }

<print-item> ::= <string> | <expr>

<input-stmt> ::= "INPUT" <var>

<goto-stmt> ::= "GOTO" <number>

<if-stmt> ::= "IF" <expr> <relop> <expr> "THEN" <number>

<end-stmt> ::= "END"

<expr> ::= <term> { ("+" | "-") <term> }

<term> ::= <factor> { ("*" | "/") <factor> }

<factor> ::= <number>
          | <var>
          | "(" <expr> ")"

<relop> ::= "=" | "<>" | "<" | ">" | "<=" | ">="

<var> ::= A | B | C | ... | Z

<number> ::= [0-9]+

<string> ::= "\"" { any character except "\"" } "\""
